--- a/RYoshiga.HotChocolateDemo.Specs/RYoshiga.HotChocolateDemo.Specs.csproj
+++ b/RYoshiga.HotChocolateDemo.Specs/RYoshiga.HotChocolateDemo.Specs.csproj
@@ -7,10 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="HotChocolate" Version="11.0.9" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="Moq" Version="4.16.1" />
-    <PackageReference Include="Shouldly" Version="4.0.3" />
+    <PackageReference Include="SpecFlow.xUnit" Version="3.7.13" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
