--- a/RYoshiga.HotChocolateDemo/Properties/launchSettings.json
+++ b/RYoshiga.HotChocolateDemo/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "RYoshiga.HotChocolateDemo": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "playground",
+      "launchUrl": "graphql",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
